--- a/K_Bridge/Views/Post/Details.cshtml
+++ b/K_Bridge/Views/Post/Details.cshtml
@@ -144,7 +144,7 @@
                     </div>
                     } *@
                         <div class="d-flex justify-content-end align-items-center">
-                            <button type="submit" id="voteButton" style=" display: none"
+                            <button type="submit" id="voteButton"
                                 class="px-3 py-1 border-main-color-layout btn-account-log rounded-3 mx-2 align-items-center d-flex text-color-header">
                                 <img class="align-content-center me-2" src="~/img/vote.png" width="18" height="18" alt="Vote Image" />
                                 Bình chọn
